--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Hey
-description:
+description: 	Neelotpal Dutta, Tianyu Zhang, Guoxin Fang, Ismail E. Yigit, and Charlie C.L. Wang,  ASME Journal of Computing and Information Science in Engineering, accepted, October 2023. (This is an extended version of the paper IDETC2023-116742, which got the Best Paper Award and is published in the ASME IDETC/CIE 2023 Conference, Boston, USA, August 20-23, 2023.)
 theme: jekyll-theme-cayman
 
