--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hey
+title:  Vector Field Based Volume Peeling for Multi-Axis Machining
 description: 	Neelotpal Dutta, Tianyu Zhang, Guoxin Fang, Ismail E. Yigit, and Charlie C.L. Wang,  ASME Journal of Computing and Information Science in Engineering, accepted, October 2023. 
 theme: jekyll-theme-cayman
 
